--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: clitest
+name: test
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  clitest:
+  run-tests:
     runs-on: macos-latest
 
     steps:
@@ -21,11 +21,6 @@ jobs:
           repository: 'aureliojargas/clitest'
           path: bin
 
-      - name: Run clitest
-        run: |
-          # clitest
-          print $ZSH_PATCHLEVEL $OSTYPE
-          fpath+=( $GITHUB_WORKSPACE/*(/) )
-          FPATH=$FPATH zsh bin/clitest --list-run --progress dot --prompt '%' \
-            --pre-flight ". $GITHUB_WORKSPACE/.znap.opts.zsh" .clitest/**.md
+      - name: Run tests
+        run: PATH=$GITHUB_WORKSPACE/bin/:$PATH ./run-tests.zsh
         shell: zsh {0}
