--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,24 +6,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-macos:
-    runs-on: macos-latest
+  test:
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          repository: 'aureliojargas/clitest'
-          path: bin
-      - run: PATH=$GITHUB_WORKSPACE/bin/:$PATH ./run-tests.zsh
-        shell: zsh {0}
-  test-ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
+          path: zsh-snap
+      - uses: actions/checkout@v3
         with:
-          repository: 'aureliojargas/clitest'
-          path: bin
+          repository: "aureliojargas/clitest"
+          path: clitest
       - run: sudo apt install zsh
-      - run: PATH=$GITHUB_WORKSPACE/bin/:$PATH ./run-tests.zsh
+        if: ${{ runner.os == 'Linux' }}
+      - run: PATH=$GITHUB_WORKSPACE/clitest:$PATH zsh-snap/run-tests.zsh
         shell: zsh {0}
